@@ -10,7 +10,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -33,7 +32,7 @@ public class LikeablePersonService {
 
         // 필수미션 케이스5
         if (member.getInstaMember().getFromLikeablePeople().size() >= 10){
-            return RsData.of("F-2", "10명까지만 호감 상대를 등록할 수 있습니다.");
+            return RsData.of("F-4", "10명까지만 호감 상대를 등록할 수 있습니다.");
         }
 
         InstaMember fromInstaMember = member.getInstaMember();
@@ -55,13 +54,13 @@ public class LikeablePersonService {
             // 기존의 사유와 다른 사유로 호감을 표시할 때
             if (likeablePerson.getAttractiveTypeCode() != attractiveTypeCode){
                 // 호감 사유를 업데이트함
-                this.updateAttractiveTypeCode(likeablePersonList.get(0), attractiveTypeCode);
+                updateAttractiveTypeCode(likeablePersonList.get(0), attractiveTypeCode);
 
                 return RsData.of("S-2", String.format("%s에 대한 호감 사유를 %s에서 %s(으)로 변경합니다.",
                         likeablePerson.getToInstaMemberUsername(), existingAttractiveName,
                         likeablePersonList.get(0).getAttractiveTypeDisplayName()));
             }
-            return RsData.of("F-2", String.format("%s님에게 중복으로 호감을 표시할 수 없습니다.", username));
+            return RsData.of("F-3", String.format("%s님에게 중복으로 호감을 표시할 수 없습니다.", username));
         }
 
         LikeablePerson likeablePerson = LikeablePerson
@@ -101,14 +100,13 @@ public class LikeablePersonService {
 
         this.likeablePersonRepository.delete(optionalLikeablePerson.get());
 
-        return RsData.of("S-1", String.format("%s님께 보낸 호감이 삭제되었습니다.", optionalLikeablePerson.get().getToInstaMemberUsername()));
+        return RsData.of("S-1", "%s님께 보낸 호감이 삭제되었습니다.".formatted(optionalLikeablePerson.get().getToInstaMemberUsername()));
     }
-
-    // 기존 호감 표시에서 사유만 수정되고, 수정 날짜도 지금으로 수정된다.
+    // 기존 호감 표시에서 사유만 수정된다.
     @Transactional
-    public void updateAttractiveTypeCode(LikeablePerson likeablePerson, Integer attractivTypeCode){
+    public void updateAttractiveTypeCode(LikeablePerson likeablePerson, Integer attractivTypeCode) {
         likeablePerson.setAttractiveTypeCode(attractivTypeCode);
-        likeablePerson.setModifyDate(LocalDateTime.now());
         likeablePersonRepository.save(likeablePerson);
     }
 }
+
